解决了添加联系人上的self。view的class误操作bug

--- a/Aier360/Controllers/联系人/Contacts.storyboard
+++ b/Aier360/Controllers/联系人/Contacts.storyboard
@@ -198,7 +198,7 @@
                         <viewControllerLayoutGuide type="top" id="tSE-P6-c7O"/>
                         <viewControllerLayoutGuide type="bottom" id="WqZ-sh-chg"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="p6y-oR-9Cq" customClass="ZXAddFoodCell">
+                    <view key="view" contentMode="scaleToFill" id="p6y-oR-9Cq">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
