--- a/Aier360/Controllers/我/Mine.storyboard
+++ b/Aier360/Controllers/我/Mine.storyboard
@@ -1403,11 +1403,11 @@
                         <viewControllerLayoutGuide type="bottom" id="v3c-jG-vuv"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="2rL-uF-05n">
-                        <rect key="frame" x="0.0" y="64" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="x3r-30-7tV">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <inset key="separatorInset" minX="15" minY="0.0" maxX="15" maxY="0.0"/>
                                 <view key="tableHeaderView" contentMode="scaleToFill" id="h7D-Cu-B6w">
@@ -1923,6 +1923,7 @@
                             <constraint firstItem="x3r-30-7tV" firstAttribute="top" secondItem="2rL-uF-05n" secondAttribute="topMargin" id="hwQ-7j-XuP"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="ouR-XP-CZS"/>
                     <connections>
                         <outlet property="buttonSpace" destination="Sxb-CK-Xdn" id="mhd-qx-mSa"/>
                         <outlet property="chatButton" destination="o0z-rJ-wBk" id="0d5-Wd-DE6"/>
@@ -1937,6 +1938,24 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xSL-mp-HZg" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="519" y="-981"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="Gmg-xC-7zY">
+            <objects>
+                <navigationController id="BQf-QR-Nbl" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="55o-3l-3ar">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="barTintColor" red="0.1019607843" green="0.1176470588" blue="0.12941176469999999" alpha="1" colorSpace="calibratedRGB"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="LKC-aW-f3b" kind="relationship" relationship="rootViewController" id="X0R-HE-vId"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="OSn-Sh-Wzp" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-116" y="-981"/>
         </scene>
     </scenes>
     <resources>
