忘记密码优化，build++

--- a/Aier360/Base.lproj/Main.storyboard
+++ b/Aier360/Base.lproj/Main.storyboard
@@ -326,6 +326,7 @@
                         <outlet property="codeTextField" destination="lql-9P-6bP" id="sK9-ml-nTG"/>
                         <outlet property="getCodeButton" destination="5O2-Dh-FdL" id="gLW-xM-6Vo"/>
                         <outlet property="phoneTextField" destination="6jM-1E-Eqe" id="tqb-hM-zIz"/>
+                        <outlet property="privacyButton" destination="pp4-MK-6BM" id="IMy-u7-PxR"/>
                         <outlet property="verifyImage" destination="hsp-hn-sGI" id="ZUG-Wo-SX7"/>
                         <outlet property="verifyTextField" destination="aQJ-f5-1TO" id="qyY-sg-zEf"/>
                         <segue destination="pmg-jH-5Za" kind="show" identifier="password" id="KqA-Md-2DA"/>
